sbt lwjgl giter8 option.

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,3 +2,4 @@ name=JMonkey Project
 description=Used to get all the boilerplate stuffs for a jMonkey Project
 package=com.awesome
 class=Game
+sbt_lwjgl_version=2.0.5
