Made targeted jmonkey build configurable.

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,3 +3,4 @@ description=Used to get all the boilerplate stuffs for a jMonkey Project
 package=com.awesome
 class=Game
 sbt_lwjgl_version=2.0.5
+jmonkey_version=2011-04-20
