--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,6 +1,8 @@
-name=JMonkey Project
+name=jmonkey-project
 description=Used to get all the boilerplate stuffs for a jMonkey Project
 package=com.awesome
+version=0.1.0-SNAPSHOT
 class=Game
-sbt_lwjgl_version=2.0.5
-jmonkey_version=2011-04-20
+scala_version=2.9.0
+sbt_lwjgl_version=3.0.1
+jmonkey_version=2011-06-01
