Fixed template for version bump.

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,8 +1,8 @@
-name=jmonkey-project
+name=JMonkey Project
 description=Used to get all the boilerplate stuffs for a jMonkey Project
 package=com.awesome
 version=0.1.0-SNAPSHOT
 class=Game
 scala_version=2.9.0
-sbt_lwjgl_version=3.0.4
-jmonkey_version=2011-06-01
+sbt_lwjgl_version=3.0.5
+jmonkey_version=2011-08-14
